<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/nav_cart"
            android:iconTint="@color/colorNavTitle"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/nav_orders"
            android:iconTint="@color/colorNavTitle"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/nav_categories"
            android:iconTint="@color/colorNavTitle"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings"
            android:iconTint="@color/colorNavTitle"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_logout"
            android:iconTint="@color/colorNavTitle"/>
    </group>

</menu>
