<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity" >

   <ImageView
       android:id="@+id/login_app_logo"
       android:contentDescription="@string/app_logo"
       android:layout_width="300dp"
       android:layout_height="100dp"
       android:src="@drawable/applogo"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="100dp"
       />
    <EditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_app_logo"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:hint="@string/phone_input"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/login_linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/password_input"
        android:layout_marginTop="6dp"
        >
        <CheckBox
            android:id="@+id/remember_ch_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:text="@string/remember_ch_box"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="17dp"
            />
        <TextView
            android:id="@+id/forget_pw_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pw_link"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="100dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_linear_layout_1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login_btn"
        android:textColor="@android:color/white"
        />
    <TextView
        android:id="@+id/seller_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:text="@string/seller_link"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        />

    <TextView
        android:id="@+id/customer_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:text="@string/customers_link"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="120dp"
        android:layout_marginStart="5dp"
        android:visibility="invisible"
        />


</RelativeLayout>