<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SellerActivity">

    <ImageView
        android:id="@+id/add_product_img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/add_product_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/add_product_img"
        />

    <EditText
    android:id="@+id/product_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/add_product_img"
    android:inputType="textMultiLine"
    android:layout_marginTop="30dp"
    android:padding="20dp"
    android:hint="@string/product_name"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:textColor="@color/colorPrimaryDark"
    android:textColorHint="@color/colorPrimaryDark"
    android:background="@drawable/input_design"
    />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:hint="@string/product_description"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:hint="@string/product_price"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/input_design"
        />

    <Button
        android:id="@+id/add_product_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/product_price"
        android:layout_marginTop="25dp"
        android:text="@string/add_product_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/buttons"
        />

</RelativeLayout>